--- a/TP12/views/includes/header.pug
+++ b/TP12/views/includes/header.pug
@@ -9,3 +9,5 @@ nav(class="navbar navbar-expand-lg")
                     a(class="nav-link active" aria-current="page" href="/api/products") Products
                 li(class="nav-item")
                     a(class="nav-link" href="/api/products-test") Mock-up Generator
+                li(class="nav-item")
+                    a(class="nav-link" href="/info") Info
