serverMode env variable created

--- a/TP13/views/info.pug
+++ b/TP13/views/info.pug
@@ -40,3 +40,7 @@ body
                 div(class='d-flex w-100 justify-content-between')
                     h5(class='mb-1') Project folder
                 p(class='mb-1') #{info.folder}
+            div(class='list-group-item')
+                div(class='d-flex w-100 justify-content-between')
+                    h5(class='mb-1') CPUs
+                p(class='mb-1') #{info.CPUs}
